Tue Nov  6 09:42:26 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_b): Add String#b, returning a copied string
	  whose encoding is ASCII-8BIT. [ruby-dev:45992] [Feature #6767]

Tue Nov  6 09:37:57 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ruby.c (load_file_internal): set default source encoding as
	  UTF-8 instead of US-ASCII. [ruby-core:46021] [Feature #6679]

	* parse.y (parser_initialize): set default parser encoding as
	  UTF-8 instead of US-ASCII.

Tue Nov  6 05:48:06 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/ruby/test_require.rb
	  (TestRequire#test_require_to_path_redefined_in_load_path,
	   TestRequire#test_require_to_str_redefined_in_load_path):
	  Suppress method redefined warning when test-all with RUBYOPT=-w.

Mon Nov  5 11:40:00 2012  Mark Somerville  <mark@scottishclmibs.com>

	* thread_pthread.c (rb_reserved_fd_p): fix typo in macro check
	  that prevented the ifdef ever being true.
	  [Bug #7281] [ruby-core:48940]

Mon Nov  5 23:28:57 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* file.c (rb_get_path_check_to_string): extract from
	  rb_get_path_check(). We change the spec not to call to_path of
	  String object.

	* file.c (rb_get_path_check_convert): extract from rb_get_path_check().

	* file.c (rb_get_path_check): follow the above change.

	* file.c (rb_file_expand_path_fast): remove check_expand_path_args().
	  Instead we call it in load.c.

	* file.c (rb_find_file_ext_safe): use rb_get_expanded_load_path() to
	  reduce expand cost.

	* file.c (rb_find_file_safe): ditto.

	* internal.h (rb_get_expanded_load_path): add a declaration.

	* internal.h (rb_get_path_check_to_string, rb_get_path_check_convert):
	  add declarations.

	* load.c (rb_construct_expanded_load_path): fix for compatibility.
	  Same checks in rb_get_path_check() are added. We don't replace
	  $LOAD_PATH and ensure that String object of $LOAD_PATH are frozen.
	  We don't freeze non String object and expand it every times. We add